# inclusive-code

./: .gitignore  Gemfile  LICENSE.txt  README.md  Rakefile  inclusive_code_flagged_terms.yml  inclusive_code_flagged_terms_alternatives.yml
java/: checkstyle.xml
python/: .pylintrc  README.md  inclusive_code.py  pyproject.toml
python/tests/: test_inclusive_code.py
ruby/: .rubocop.yml  Gemfile  README.md  Rakefile  inclusive-code-0.1.0.gem  inclusive-code.gemspec
ruby/config/: default.yml
ruby/lib/: inclusive-code.rb
ruby/lib/inclusive_code/: flexport.rb
ruby/lib/inclusive_code/cop/: inclusive_code.rb
ruby/lib/inclusive_code/flexport/: inject.rb  version.rb
ruby/lib/rubocop/: inclusive_code.rb
ruby/lib/rubocop/cop/: inclusive_code.rb
ruby/lib/rubocop/inclusive_code/: inject.rb  version.rb
ruby/spec/: spec_helper.rb
ruby/spec/inclusive_code/: flexport_spec.rb
ruby/spec/inclusive_code/cop/: inclusive_code_spec.rb
